--- a/css-mobile/style-index-mobile.css
+++ b/css-mobile/style-index-mobile.css
@@ -43,7 +43,7 @@ html {
 }
 
 .manual {
-    background-image: url(../imgs/manuak.png);
+    background-image: url(../imgs/manual.png);
     background-size: cover;
     margin-top: -125px;
     margin-left: 120px;
